<resources>
    <string name="app_name">APP_PM</string>
    <string name="Insert">Insert</string>
    <string name="create_new">Create New</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Delete_All">Delete All</string>
    <string name="Edit_Name">Title</string>
    <string name="Insert_Title">Insert the title:</string>
    <string name="Insert_Priority">Insert Priority:</string>
    <string name="Priority">Priority</string>
    <string name="Insert_ID">Insert an ID:</string>
    <string name="ID">ID</string>
    <string name="Insert_Note">Insert note:</string>
    <string name="Note">Note</string>
    <string name="Confirm">Confirm</string>
    <string name="add_note">Add Note:</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="OrderPriority">Order by Priority</string>
    <string name="Insert_User">Insert User:</string>
    <string name="User">User</string>
    <string name="Password">Password</string>
    <string name="Insert_Password">Insert the password:</string>
    <string name="button_login">Login</string>
    <string name="button_notas">Notes</string>
    <string name="title_activity_maps">Map</string>
    <string name="Coordinates">Coordinates</string>
    <string name="Distance">Distance</string>
    <string name="Address">Address</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="username_login" translatable="false">username_login</string>
    <string name="id_login" translatable="false">id_login</string>
    <string name="automatic_login" translatable="false">automatic_login</string>
    <string name="Name_Fail" translatable="false">Failed Name</string>
    <string name="Pass_Fail" translatable="false">Failed Password</string>
    <string name="Login_Done">Success</string>
    <string name="Login_Failed">Login Failed</string>
    <string name="logout">Logout</string>
    <string name="addmarker">Add Marker</string>
    <string name="Insert_Problem">Insert Problem</string>
    <string name="button_confirm">Confirm</string>
    <string name="Problem">Problem</string>
    <string name="FilterID">Filter by User ID</string>
    <string name="FilterDistance">Filter by Distance</string>
    <string name="NoMarker">No Markers.</string>
    <string name="Insert_UserID">Insert an User ID</string>
    <string name="UserID">User ID</string>
    <string name="ChooseID">Choose an ID:</string>
    <string name="Insert_Distance">Insert Distance:</string>
    <string name="empty">Empty!</string>
    <string name="DeleteMarker">Delete Marker</string>

</resources>
